--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-07-18 07:36:15 -0400 
+%% Created for Pete Su at 2023-07-18 07:45:40 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Almheiri2019,
+	author = {Ahmed Almheiri and Netta Engelhardt and Donald Marolf and Henry Maxfield},
+	date-added = {2023-07-18 07:44:23 -0400},
+	date-modified = {2023-07-18 07:45:40 -0400},
+	doi = {10.1007/jhep12(2019)063},
+	journal = {J. High Energ. Phys.},
+	note = {\href{https://arxiv.org/abs/1905.08762}{arxiv:1905.08762}},
+	number = {12},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {The entropy of bulk quantum fields and the entanglement wedge of an evaporating black hole},
+	url = {https://doi.org/10.1007%2Fjhep12%282019%29063},
+	volume = {2019},
+	year = 2019,
+	bdsk-url-1 = {https://doi.org/10.1007%2Fjhep12%282019%29063},
+	bdsk-url-2 = {https://doi.org/10.1007/jhep12(2019)063}}
 
 @misc{Rielh2019,
 	author = {Emily Riehl},
@@ -1494,18 +1510,6 @@
 	primaryclass = {hep-th},
 	slaccitation = {%%CITATION = ARXIV:1905.08255;%%},
 	title = {{Entanglement Wedge Reconstruction and the Information Paradox}},
-	year = {2019}}
-
-@article{Almheiri:2019psf,
-	archiveprefix = {arXiv},
-	author = {Almheiri, Ahmed and Engelhardt, Netta and Marolf, Donald and Maxfield, Henry},
-	date-added = {2019-11-20 08:35:25 -0500},
-	date-modified = {2019-11-20 08:35:48 -0500},
-	eprint = {1905.08762},
-	note = {\href{https://arxiv.org/abs/1905.08762}{arxiv:1905.08762}},
-	primaryclass = {hep-th},
-	slaccitation = {%%CITATION = ARXIV:1905.08762;%%},
-	title = {{The entropy of bulk quantum fields and the entanglement wedge of an evaporating black hole}},
 	year = {2019}}
 
 @article{Dong:2016eik,
