--- a/bib.bib
+++ b/bib.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-07-18 07:45:40 -0400 
+%% Created for Pete Su at 2023-07-18 09:13:53 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -634,8 +634,9 @@
 	author = {Baez, John C. and Dolan, James},
 	copyright = {Assumed arXiv.org perpetual, non-exclusive license to distribute this article for submissions made before January 2004},
 	date-added = {2023-07-16 07:46:00 -0400},
-	date-modified = {2023-07-16 07:46:10 -0400},
+	date-modified = {2023-07-18 09:11:15 -0400},
 	doi = {10.48550/ARXIV.MATH/9802029},
+	journal = {arXiv Preprint},
 	keywords = {Quantum Algebra (math.QA), Category Theory (math.CT), FOS: Mathematics, FOS: Mathematics},
 	note = {\href{https://arxiv.org/abs/math/9802029}{arxiv:math/9802029}},
 	publisher = {arXiv},
@@ -724,9 +725,8 @@
 	bdsk-url-1 = {https://doi.org/10.4204/eptcs.323.8}}
 
 @book{Baez2010,
-	author = {John C. Baez and J. Peter May},
 	date-added = {2023-07-15 16:31:52 -0400},
-	date-modified = {2023-07-15 16:32:31 -0400},
+	date-modified = {2023-07-18 09:09:42 -0400},
 	doi = {10.1007/978-1-4419-1524-5},
 	editor = {John C. Baez and J. Peter May},
 	publisher = {Springer New York},
@@ -1763,11 +1763,11 @@
 	year = {2018},
 	bdsk-url-1 = {https://doi.org/10.1093/bjps/axw004}}
 
-@article{AWODEY:2018aa,
+@article{Awodey:2018aa,
 	abstract = {The notion of a natural model of type theory is defined in terms of that of a representable natural transfomation of presheaves. It is shown that such models agree exactly with the concept of a category with families in the sense of Dybjer, which can be regarded as an algebraic formulation of type theory. We determine conditions for such models to satisfy the inference rules for dependent sums...], dependent products...]and intensional identity types , as used in homotopy type theory. It is then shown that a category admits such a model if it has a class of maps that behave like the abstract fibrations in axiomatic homotopy theory: They should be stable under pullback, closed under composition and relative products, and there should be weakly orthogonal factorizations into the class. It follows that many familiar settings for homotopy theory also admit natural models of the basic system of homotopy type theory.},
-	author = {AWODEY,STEVE},
+	author = {Steve Awodey},
 	date-added = {2019-09-05 18:38:13 -0400},
-	date-modified = {2019-09-05 18:40:44 -0400},
+	date-modified = {2023-07-18 09:12:42 -0400},
 	isbn = {09601295},
 	journal = {Mathematical Structures in Computer Science},
 	keywords = {Mathematics--Computer Applications; Homotopy theory},
@@ -1851,9 +1851,9 @@
 	year = 2010}
 
 @article{Awodey2009,
-	author = {STEVE AWODEY and MICHAEL A. WARREN},
+	author = {Awodey, Steve and Warren, Michael A},
 	date-added = {2019-09-02 12:53:23 -0400},
-	date-modified = {2019-09-02 12:57:40 -0400},
+	date-modified = {2023-07-18 09:13:53 -0400},
 	doi = {10.1017/s0305004108001783},
 	journal = {Mathematical Proceedings of the Cambridge Philosophical Society},
 	month = jan,
@@ -3032,8 +3032,9 @@
 	archiveprefix = {arXiv},
 	author = {Braunstein, Samuel L. and Sommers, Hans-Jurgen and Zyczkowski, Karol},
 	date-added = {2019-03-15 12:52:38 -0400},
-	date-modified = {2019-03-15 12:56:56 -0400},
+	date-modified = {2023-07-18 09:08:51 -0400},
 	eprint = {0907.0739},
+	journal = {arXiv preprint},
 	note = {\href{https://arxiv.org/abs/0907.0739}{https://arxiv.org/abs/0907.0739}},
 	primaryclass = {quant-ph},
 	slaccitation = {%%CITATION = ARXIV:0907.0739;%%},
@@ -3044,8 +3045,9 @@
 	archiveprefix = {arXiv},
 	author = {Braunstein, Samuel L.},
 	date-added = {2019-03-15 12:49:25 -0400},
-	date-modified = {2019-03-15 12:55:38 -0400},
+	date-modified = {2023-07-18 09:08:08 -0400},
 	eprint = {0907.1190v1},
+	journal = {arXiv preprint},
 	note = {\href{https://arxiv.org/abs/0907.1190v1}{arxiv:0907.1190v1}},
 	primaryclass = {quant-ph},
 	slaccitation = {%%CITATION = ARXIV:0907.1190;%%},
@@ -3057,8 +3059,9 @@
 	archiveprefix = {arXiv},
 	author = {Braunstein, Samuel L. and Zyczkowski, Karol},
 	date-added = {2019-03-15 12:20:47 -0400},
-	date-modified = {2019-03-15 12:57:01 -0400},
+	date-modified = {2023-07-18 09:08:53 -0400},
 	eprint = {0907.1190v2},
+	journal = {arXiv preprint},
 	note = {\href{https://arxiv.org/abs/0907.1190v2}{https://arxiv.org/abs/0907.1190v2}},
 	primaryclass = {quant-ph},
 	title = {{Entangled black holes as ciphers of hidden information}},
