--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,42 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-07-18 09:13:53 -0400 
+%% Created for Pete Su at 2023-07-18 12:03:09 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Riehl2017arxiv,
+	author = {Emily Riehl and Michael Shulman},
+	date-added = {2023-07-18 12:01:16 -0400},
+	date-modified = {2023-07-18 12:02:48 -0400},
+	journal = {arXiv},
+	note = {\href{https://arxiv.org/abs/1705.07442}{arxiv:1705.07442}},
+	publisher = {Institute of Mathematics, Czech Academy of Sciences},
+	title = {A type theory for synthetic $\infty$-categories},
+	url = {https://doi.org/10.21136%2Fhs.2017.06},
+	year = 2017,
+	bdsk-url-1 = {https://doi.org/10.21136%2Fhs.2017.06},
+	bdsk-url-2 = {https://doi.org/10.21136/hs.2017.06}}
+
+@article{Riehl2017,
+	author = {Emily Riehl and Michael Shulman},
+	date-added = {2023-07-18 11:59:12 -0400},
+	date-modified = {2023-07-18 12:03:09 -0400},
+	doi = {10.21136/hs.2017.06},
+	journal = {Higher Structures},
+	note = {\href{https://doi.org/10.21136\%2Fhs.2017.06}{doi:10.21136\%2Fhs.2017.06}},
+	number = {1},
+	pages = {147--224},
+	publisher = {Institute of Mathematics, Czech Academy of Sciences},
+	title = {A type theory for synthetic $\infty$-categories},
+	url = {https://doi.org/10.21136%2Fhs.2017.06},
+	volume = {1},
+	year = 2017,
+	bdsk-url-1 = {https://doi.org/10.21136%2Fhs.2017.06},
+	bdsk-url-2 = {https://doi.org/10.21136/hs.2017.06}}
 
 @article{Almheiri2019,
 	author = {Ahmed Almheiri and Netta Engelhardt and Donald Marolf and Henry Maxfield},
