--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,66 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-07-18 12:03:09 -0400 
+%% Created for Pete Su at 2023-07-19 07:24:31 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Rosiak2022,
+	author = {Daniel Rosiak},
+	date-added = {2023-07-19 07:23:49 -0400},
+	date-modified = {2023-07-19 07:24:31 -0400},
+	doi = {10.7551/mitpress/12581.001.0001},
+	note = {\href{https://arxiv.org/abs/2012.08669}{arxiv:2012.08669}},
+	publisher = {The {MIT} Press},
+	title = {Sheaf Theory through Examples},
+	url = {https://doi.org/10.7551%2Fmitpress%2F12581.001.0001},
+	year = 2022,
+	bdsk-url-1 = {https://doi.org/10.7551%2Fmitpress%2F12581.001.0001},
+	bdsk-url-2 = {https://doi.org/10.7551/mitpress/12581.001.0001}}
+
+@article{Riehl2015,
+	author = {Emily Riehl and Dominic Verity},
+	date-added = {2023-07-19 07:21:28 -0400},
+	date-modified = {2023-07-19 07:22:02 -0400},
+	doi = {10.1016/j.aim.2015.04.021},
+	journal = {Advances in Mathematics},
+	note = {\href{https://arxiv.org/abs/1306.5144}{arxiv:1306.5144}},
+	pages = {549--642},
+	publisher = {Elsevier {BV}},
+	title = {The 2-category theory of quasi-categories},
+	url = {https://doi.org/10.1016%2Fj.aim.2015.04.021},
+	volume = {280},
+	year = 2015,
+	bdsk-url-1 = {https://doi.org/10.1016%2Fj.aim.2015.04.021},
+	bdsk-url-2 = {https://doi.org/10.1016/j.aim.2015.04.021}}
+
+@article{Riehl2020,
+	author = {Riehl, Emily and Verity, Dominic},
+	date-added = {2023-07-19 07:18:49 -0400},
+	date-modified = {2023-07-19 07:20:04 -0400},
+	journal = {Higher Structures},
+	note = {\href{https://arxiv.org/abs/1608.05314}{arxiv:1608.05314}},
+	number = {1},
+	pages = {115-167},
+	title = {Infinity category theory from scratch},
+	volume = {4},
+	year = {2020}}
+
+@book{Riehl2022,
+	author = {Emily Riehl and Dominic Verity},
+	date-added = {2023-07-19 07:15:48 -0400},
+	date-modified = {2023-07-19 07:16:52 -0400},
+	doi = {10.1017/9781108936880},
+	note = {\href{https://math.jhu.edu/~eriehl/elements.pdf}{Preview}},
+	publisher = {Cambridge University Press},
+	title = {Elements of $\infty$-Category Theory},
+	url = {https://doi.org/10.1017%2F9781108936880},
+	year = 2022,
+	bdsk-url-1 = {https://doi.org/10.1017%2F9781108936880},
+	bdsk-url-2 = {https://doi.org/10.1017/9781108936880}}
 
 @article{Riehl2017arxiv,
 	author = {Emily Riehl and Michael Shulman},
@@ -3987,11 +4041,11 @@ horizon.},
 	year = {2010},
 	bdsk-url-1 = {https://books.google.com/books?id=ZOfUsvemJDMC}}
 
-@article{Richter:2014pga,
+@article{Richter2014pga,
 	archiveprefix = {arXiv},
 	author = {Richter, Burton},
 	date-added = {2019-02-21 18:29:27 +0000},
-	date-modified = {2019-02-21 18:29:27 +0000},
+	date-modified = {2023-07-18 12:31:18 -0400},
 	doi = {10.1142/9789814651493_0001, 10.1142/S1793626814300011},
 	eprint = {1409.1196},
 	journal = {Rev. Accel. Sci. Tech.},
