--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,123 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-07-19 07:24:31 -0400 
+%% Created for Pete Su at 2023-07-20 07:19:00 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{VanDalen1994,
+	author = {Van Dalen, Dirk},
+	date-added = {2023-07-20 07:18:43 -0400},
+	date-modified = {2023-07-20 07:19:00 -0400},
+	publisher = {Springer},
+	title = {Logic and structure},
+	year = {1994}}
+
+@article{seebach1970sheaf,
+	author = {Seebach Jr, J Arthur and Seebach, Linda A and Steen, Lynn A},
+	date-added = {2023-07-20 07:14:06 -0400},
+	date-modified = {2023-07-20 07:14:06 -0400},
+	journal = {The American Mathematical Monthly},
+	number = {7},
+	pages = {681--703},
+	publisher = {Taylor \& Francis},
+	title = {What is a sheaf?},
+	volume = {77},
+	year = {1970}}
+
+@misc{Rabinovich2016,
+	author = {Eugene Rabinvovich},
+	date-added = {2023-07-20 07:12:06 -0400},
+	date-modified = {2023-07-20 07:12:06 -0400},
+	howpublished = {Online Notes},
+	note = {\href{https://math.berkeley.edu/~erabin/The%20Categorical%20Language%20of%20Physics.pdf}{PDF}},
+	title = {{The Categorical Language of Quantum Physics}}}
+
+@misc{Weng2011,
+	author = {Daping Weng},
+	date-added = {2023-07-20 07:09:17 -0400},
+	date-modified = {2023-07-20 07:13:13 -0400},
+	howpublished = {Online Notes},
+	note = {\href{https://math.uchicago.edu/~may/VIGRE/VIGRE2011/REUPapers/WengD.pdf}{PDF}},
+	title = {A Categorical Introduction To Sheaves}}
+
+@book{Tennison1975sheaf,
+	author = {Tennison, Barry R},
+	date-added = {2023-07-20 07:07:58 -0400},
+	date-modified = {2023-07-20 07:08:14 -0400},
+	publisher = {Cambridge University Press},
+	series = {London Mathematical Society Lecture Note Series},
+	title = {Sheaf theory},
+	volume = {21},
+	year = {1975}}
+
+@book{spivak2014category,
+	author = {Spivak, David I},
+	date-added = {2023-07-20 07:06:23 -0400},
+	date-modified = {2023-07-20 07:06:23 -0400},
+	publisher = {MIT press},
+	title = {Category theory for the sciences},
+	year = {2014}}
+
+@book{Smith2023a,
+	author = {Peter Smith},
+	date-added = {2023-07-20 07:05:27 -0400},
+	date-modified = {2023-07-20 07:05:54 -0400},
+	note = {\href{https://www.logicmatters.net/resources/pdfs/SmithCat-I.pdf}{PDF}},
+	publisher = {Online Notes},
+	title = {Category Theory I: Notes towards a gentle introduction},
+	year = {2023}}
+
+@book{Smith2023b,
+	author = {Peter Smith},
+	date-added = {2023-07-20 07:02:51 -0400},
+	date-modified = {2023-07-20 07:05:42 -0400},
+	note = {\href{https://www.logicmatters.net/resources/pdfs/SmithCat-II.pdf}{PDF}},
+	publisher = {Online Notes},
+	title = {Category Theory II: More Notes towards a gentle introduction},
+	year = {2023}}
+
+@book{Simpson2011homotopy,
+	author = {Simpson, Carlos},
+	date-added = {2023-07-20 07:01:22 -0400},
+	date-modified = {2023-07-20 07:02:20 -0400},
+	publisher = {Cambridge University Press},
+	series = {New Mathematical Monographs},
+	title = {Homotopy Theory of Higher Categories: From Segal Categories to n-Categories and Beyond},
+	volume = {19},
+	year = {2011}}
+
+@book{Lawvere2003sets,
+	author = {Lawvere, F William and Rosebrugh, Robert},
+	date-added = {2023-07-20 07:00:13 -0400},
+	date-modified = {2023-07-20 07:00:19 -0400},
+	publisher = {Cambridge University Press},
+	title = {Sets for mathematics},
+	year = {2003}}
+
+@incollection{Scott2000,
+	author = {Scott, Phill J},
+	booktitle = {Handbook of algebra},
+	date-added = {2023-07-20 06:58:10 -0400},
+	date-modified = {2023-07-20 06:58:18 -0400},
+	pages = {3--77},
+	publisher = {Elsevier},
+	title = {Some aspects of categories in computer science},
+	volume = {2},
+	year = {2000}}
+
+@book{rydeheard1988computational,
+	author = {Rydeheard, David E and Burstall, Rod M},
+	date-added = {2023-07-20 06:56:39 -0400},
+	date-modified = {2023-07-20 06:57:31 -0400},
+	note = {\href{https://www.cs.man.ac.uk/~david/categories/book/book.pdf}{PDF}},
+	publisher = {Prentice Hall Englewood Cliffs},
+	title = {Computational category theory},
+	volume = {152},
+	year = {1988}}
 
 @book{Rosiak2022,
 	author = {Daniel Rosiak},
